# afsim-planner

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  start.sh  三维避障航路规划 CLI 工具设计方案与规格说明书.md
.cargo/: config.toml
.github/workflows/: release.yml
afsim-planner/: Cargo.toml
afsim-planner/src/: config.rs  error.rs  lib.rs  main.rs
cli/: Cargo.toml
cli/src/: macro_router.rs  main.rs
demo/: start.sh
demo/server/: Cargo.toml
demo/server/src/: main.rs
demo/web/: index.html  package.json
demo/web/src/: App.css  api.ts
demo/web/src/components/: ControlPanel.tsx  NFZPrism.tsx  RadarSphere.tsx  Scene3D.tsx  TargetZone.tsx
server/: Cargo.toml
server/src/: main.rs
src/: config.rs  geometry.rs  main.rs  solver.rs
tests/fixtures/: sample_input.json
web/: index.html  package.json  pnpm-lock.yaml
web/src/: App.tsx  types.ts
web/src/components/: PathLine.tsx  StartMarker.tsx
