[package]
name = "rplan-cli"
version = "0.4.0"
edition = "2021"
description = "AFSIM pre-mission 3D route planning CLI engine with deterministic A* and kinematic pruning"
repository = "https://github.com/hllshiro/simple-router-planner"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "rplan-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
