[package]
name = "afsim-planner-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
afsim-planner = { path = "../afsim-planner" }
tower-http = { version = "0.5", features = ["cors"] }
